--- a/app/src/main/res/layout/fragment_meal_management.xml
+++ b/app/src/main/res/layout/fragment_meal_management.xml
@@ -15,4 +15,11 @@
         android:textSize="20dp"
         android:text="Meal management fragment" />
 
+    <ListView
+        android:id="@+id/main_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
+    </ListView>
+
 </FrameLayout>
